tests/NormalTests/paczka1/small_fuzzy/41171422.err
Error in line 5: IRITWpp11i S855 43,5
Error in line 2: 4e5obDxt8 S855 85,5
